recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:2: error: not found: value nbPas
  if (nbPas!=0){
      ^Tree:5: warning: enclosing method tree has result type Unit: return value discarded
    return (tree(steps-1, length, angle, shrink), tree(steps-1, length, angle, shrink))
    ^