recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (nbPas!=0){
    avance(length);
    droite(angle);
    return (tree(steps-1, length, angle, shrink), tree(steps-1, length, angle, shrink))
    
    
  }
}